assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 138 conflicts: 9 shift/reduce
State 150 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';' class

    7 feature_list: ε
    8             | feature_list feature
    9             | feature_list error ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' TYPEID ';'

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expr_list_dispatch: expr
   18                   | expr_list_dispatch ',' expr

   19 expr_list_block: expr ';'
   20                | expr_list_block expr ';'
   21                | expr_list_block error ';'

   22 expr: OBJECTID ASSIGN expr
   23     | expr '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr '.' OBJECTID '(' ')'
   25     | OBJECTID '(' expr_list_dispatch ')'
   26     | OBJECTID '(' ')'
   27     | expr '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr '@' TYPEID '.' OBJECTID '(' ')'
   29     | IF expr THEN expr ELSE expr FI
   30     | WHILE expr LOOP expr POOL
   31     | '{' expr_list_block '}'
   32     | LET expr_let
   33     | CASE expr OF case_list ESAC
   34     | NEW TYPEID
   35     | ISVOID expr
   36     | expr '+' expr
   37     | expr '-' expr
   38     | expr '*' expr
   39     | expr '/' expr
   40     | '~' expr
   41     | expr '<' expr
   42     | expr LE expr
   43     | expr '=' expr
   44     | NOT expr
   45     | '(' expr ')'
   46     | OBJECTID
   47     | INT_CONST
   48     | STR_CONST
   49     | BOOL_CONST

   50 expr_let: OBJECTID ':' TYPEID IN expr
   51         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   52         | OBJECTID ':' TYPEID ',' expr_let
   53         | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let
   54         | error ',' expr_let

   55 case_list: ε
   56          | case_list case

   57 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 11 23 24 25 26 27 28 45
    ')' (41) 10 11 23 24 25 26 27 28 45
    '*' (42) 38
    '+' (43) 36
    ',' (44) 15 18 52 53 54
    '-' (45) 37
    '.' (46) 23 24 27 28
    '/' (47) 39
    ':' (58) 10 11 12 13 16 50 51 52 53 57
    ';' (59) 4 5 6 9 10 11 12 13 19 20 21 57
    '<' (60) 41
    '=' (61) 43
    '@' (64) 27 28
    '{' (123) 4 5 10 11 31
    '}' (125) 4 5 10 11 31
    '~' (126) 40
    error (256) 6 9 21 54
    CLASS (258) 4 5 6
    ELSE (259) 29
    FI (260) 29
    IF (261) 29
    IN (262) 50 51
    INHERITS (263) 5
    LET (264) 32
    LOOP (265) 30
    POOL (266) 30
    THEN (267) 29
    WHILE (268) 30
    CASE (269) 33
    ESAC (270) 33
    OF (271) 33
    DARROW (272) 57
    NEW (273) 34
    ISVOID (274) 35
    STR_CONST <symbol> (275) 48
    INT_CONST <symbol> (276) 47
    BOOL_CONST <boolean> (277) 49
    TYPEID <symbol> (278) 4 5 10 11 12 13 16 27 28 34 50 51 52 53 57
    OBJECTID <symbol> (279) 10 11 12 13 16 22 23 24 25 26 27 28 46 50 51 52 53 57
    ASSIGN (280) 12 22 51 53
    NOT (281) 44
    LE (282) 42
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3 6
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 8 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8
    formal_list <formals> (51)
        on left: 14 15
        on right: 10 15
    formal <formal> (52)
        on left: 16
        on right: 14 15
    expr_list_dispatch <expressions> (53)
        on left: 17 18
        on right: 18 23 25 27
    expr_list_block <expressions> (54)
        on left: 19 20 21
        on right: 20 21 31
    expr <expression> (55)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 10 11 12 17 18 19 20 22 23 24 27 28 29 30 33 35 36 37 38 39 40 41 42 43 44 45 50 51 53 57
    expr_let <expression> (56)
        on left: 50 51 52 53 54
        on right: 32 52 53 54
    case_list <cases> (57)
        on left: 55 56
        on right: 33 56
    case <case_> (58)
        on left: 57
        on right: 56


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS • error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error • ';' class

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' • class

    CLASS  shift, and go to state 1

    class  go to state 12


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 14


State 12

    6 class: CLASS error ';' class •

    $default  reduce using rule 6 (class)


State 13

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 14

    4 class: CLASS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature
    9             | feature_list • error ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 20


State 16

    9 feature_list: feature_list error • ';'

    ';'  shift, and go to state 21


State 17

   10 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID • '(' ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID • ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID • ':' TYPEID ';'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 18

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 24


State 19

    8 feature_list: feature_list feature •

    $default  reduce using rule 8 (feature_list)


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature
    9             | feature_list • error ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 25

    feature  go to state 19


State 21

    9 feature_list: feature_list error ';' •

    $default  reduce using rule 9 (feature_list)


State 22

   10 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID '(' • ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal_list  go to state 28
    formal       go to state 29


State 23

   12 feature: OBJECTID ':' • TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' • TYPEID ';'

    TYPEID  shift, and go to state 30


State 24

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 31


State 26

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 32


State 27

   11 feature: OBJECTID '(' ')' • ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 33


State 28

   10 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}' ';'
   15 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 29

   14 formal_list: formal •

    $default  reduce using rule 14 (formal_list)


State 30

   12 feature: OBJECTID ':' TYPEID • ASSIGN expr ';'
   13        | OBJECTID ':' TYPEID • ';'

    ASSIGN  shift, and go to state 36
    ';'     shift, and go to state 37


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 32

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 38


State 33

   11 feature: OBJECTID '(' ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 39


State 34

   10 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 40


State 35

   15 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 26

    formal  go to state 41


State 36

   12 feature: OBJECTID ':' TYPEID ASSIGN • expr ';'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 56


State 37

   13 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 13 (feature)


State 38

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 39

   11 feature: OBJECTID '(' ')' ':' TYPEID • '{' expr '}' ';'

    '{'  shift, and go to state 57


State 40

   10 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 58


State 41

   15 formal_list: formal_list ',' formal •

    $default  reduce using rule 15 (formal_list)


State 42

   29 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 59


State 43

   32 expr: LET • expr_let

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    expr_let  go to state 62


State 44

   30 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 63


State 45

   33 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 64


State 46

   34 expr: NEW • TYPEID

    TYPEID  shift, and go to state 65


State 47

   35 expr: ISVOID • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 66


State 48

   48 expr: STR_CONST •

    $default  reduce using rule 48 (expr)


State 49

   47 expr: INT_CONST •

    $default  reduce using rule 47 (expr)


State 50

   49 expr: BOOL_CONST •

    $default  reduce using rule 49 (expr)


State 51

   22 expr: OBJECTID • ASSIGN expr
   25     | OBJECTID • '(' expr_list_dispatch ')'
   26     | OBJECTID • '(' ')'
   46     | OBJECTID •

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 46 (expr)


State 52

   44 expr: NOT • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 69


State 53

   40 expr: '~' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 70


State 54

   31 expr: '{' • expr_list_block '}'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr_list_block  go to state 71
    expr             go to state 72


State 55

   45 expr: '(' • expr ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 73


State 56

   12 feature: OBJECTID ':' TYPEID ASSIGN expr • ';'
   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 57

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' • expr '}' ';'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 84


State 58

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}' ';'

    '{'  shift, and go to state 85


State 59

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   29     | IF expr • THEN expr ELSE expr FI
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    THEN  shift, and go to state 86
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 60

   54 expr_let: error • ',' expr_let

    ','  shift, and go to state 87


State 61

   50 expr_let: OBJECTID • ':' TYPEID IN expr
   51         | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   52         | OBJECTID • ':' TYPEID ',' expr_let
   53         | OBJECTID • ':' TYPEID ASSIGN expr ',' expr_let

    ':'  shift, and go to state 88


State 62

   32 expr: LET expr_let •

    $default  reduce using rule 32 (expr)


State 63

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   30     | WHILE expr • LOOP expr POOL
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 64

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   33     | CASE expr • OF case_list ESAC
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 65

   34 expr: NEW TYPEID •

    $default  reduce using rule 34 (expr)


State 66

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   35     | ISVOID expr •
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 35 (expr)


State 67

   22 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 91


State 68

   25 expr: OBJECTID '(' • expr_list_dispatch ')'
   26     | OBJECTID '(' • ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55
    ')'         shift, and go to state 92

    expr_list_dispatch  go to state 93
    expr                go to state 94


State 69

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr
   44     | NOT expr •

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 44 (expr)


State 70

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   40     | '~' expr •
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 40 (expr)


State 71

   20 expr_list_block: expr_list_block • expr ';'
   21                | expr_list_block • error ';'
   31 expr: '{' expr_list_block • '}'

    error       shift, and go to state 95
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '}'         shift, and go to state 96
    '('         shift, and go to state 55

    expr  go to state 97


State 72

   19 expr_list_block: expr • ';'
   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 98


State 73

   23 expr: expr • '.' OBJECTID '(' expr_list_dispatch ')'
   24     | expr • '.' OBJECTID '(' ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr
   45     | '(' expr • ')'

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ')'  shift, and go to state 99


State 74

   42 expr: expr LE • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 100


State 75

   41 expr: expr '<' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 101


State 76

   43 expr: expr '=' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 102


State 77

   36 expr: expr '+' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 103


State 78

   37 expr: expr '-' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 104


State 79

   38 expr: expr '*' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 105


State 80

   39 expr: expr '/' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 106


State 81

   27 expr: expr '@' • TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   28     | expr '@' • TYPEID '.' OBJECTID '(' ')'

    TYPEID  shift, and go to state 107


State 82

   23 expr: expr '.' • OBJECTID '(' expr_list_dispatch ')'
   24     | expr '.' • OBJECTID '(' ')'

    OBJECTID  shift, and go to state 108


State 83

   12 feature: OBJECTID ':' TYPEID ASSIGN expr ';' •
